# Galactic-archeology

./: .gitignore  .readthedocs.yaml  Dockerfile  Makefile  README.md  README.rst  TODO.md  analysis.py  creator.py  example_runner.sh  integration.py  main.py  manual_analysis.py  mkdocs.yml  pyproject.toml  requirements-conda.txt  requirements.txt  setup.py  tests.py
cli/: config_utils.py  main.py
docs/: Makefile  cli.md  creation.md  development.md  index.md  requirements.txt
examples/: analysis_config.yaml  analysis_schema.json  bound_mass_computation_analysis.yaml  cm-density_potcm-density_analysis.yaml  creation_config.yaml  creation_schema.json  density_potential_velocity_analysis.yaml  density_xy_analysis.yaml  distance_computation_analysis.yaml  dummy_analysis.yaml  integration_bound_mass_computation.yaml  integration_config.yaml  integration_schema.json  spatial_analysis.yaml
io_service/: __init__.py  config.py  main.py  readers.py
json_logger/: __init__.py  config.py  logger.py  main.py
libs/: Dockerfile
logger/: __init__.py  config.py  logger.py  main.py
omtool/: __init__.py  analysis.py  creator.py  export_csv.py  integration.py  misc.py
package/: Dockerfile  requirements.txt
schemas/: analysis_schema.json  creation_schema.json  integration_schema.json
src/: analize.py  analysis.py  falcon_integrator.py  main.py  nemo_to_snapshot_reader.py  snapshot.py  snapshot_to_nemo_writer.py  system_factory.py  tracker.py  visualizer.py
tasks/: bound_mass_task.py  distance_task.py  velocity_profile_task.py
test/: test_config.py
tests/: __init__.py
(+261 files in other folders)
